--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cl_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
@@ -38,6 +39,8 @@
         <android.support.design.widget.TextInputEditText
             android:id="@+id/et_user_id"
             android:layout_width="match_parent"
+            android:maxLines="1"
+            android:imeOptions="actionNext"
             android:layout_height="wrap_content"
             android:hint="User Id"
             android:textSize="@dimen/_15sdp" />
@@ -61,6 +64,9 @@
             android:id="@+id/et_pwd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:imeOptions="actionNext"
+            android:inputType="textPassword"
             android:hint="Password"
             android:textSize="@dimen/_15sdp" />
 
@@ -74,8 +80,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="64dp"
         android:background="@color/redOrange"
-        android:textColor="@color/colorPrimary"
         android:text="Login"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_default="wrap"
         app:layout_constraintStart_toStartOf="parent"
