--- a/app/src/main/res/layout/fragment_user_detail.xml
+++ b/app/src/main/res/layout/fragment_user_detail.xml
@@ -248,6 +248,7 @@
             </android.support.design.widget.TextInputLayout>
 
             <Button
+                android:id="@+id/bt_next"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_34sdp"
                 android:background="@color/colorAccent"
