--- a/app/src/main/res/layout/fragment_vehicle_detail.xml
+++ b/app/src/main/res/layout/fragment_vehicle_detail.xml
@@ -9,22 +9,42 @@
         android:id="@+id/sc_vehicle_detail"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintWidth_default="spread"
-        app:layout_constraintHeight_default="spread"
+        android:layout_marginBottom="@dimen/_7sdp"
         android:layout_marginLeft="@dimen/_10sdp"
         android:layout_marginRight="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginBottom="@dimen/_7sdp"
         app:layout_constraintBottom_toTopOf="@+id/bt_next"
+        app:layout_constraintHeight_default="spread"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_default="spread">
 
-        <LinearLayout
-            android:id="@+id/ll_vehicle_details"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"/>
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:id="@+id/ll_vehicle_details"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
+
+            <TextView
+                android:id="@+id/tv_add_new"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:padding="@dimen/_8sdp"
+                android:backgroundTint="@color/colorAccent"
+                android:textSize="@dimen/_12sdp"
+                android:textColor="@color/white"
+                android:background="@drawable/curved_rect_field"
+                android:layout_marginLeft="@dimen/_11sdp"
+                android:layout_below="@+id/ll_vehicle_details"
+                android:text="Add New" />
+
+        </RelativeLayout>
 
     </ScrollView>
 
