--- a/app/src/main/res/drawable/bg_rect_black.xml
+++ b/app/src/main/res/drawable/bg_rect_black.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="10dp"/>
-    <stroke android:color="@color/black"
+    <stroke android:color="@color/Gray_one"
         android:width="1dp"/>
 </shape>
