--- a/app/src/main/res/layout/fragment_driver_detail.xml
+++ b/app/src/main/res/layout/fragment_driver_detail.xml
@@ -3,17 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.raig.uportinfo.user_form.VehicleDetailFragment">
+    tools:context="com.raig.uportinfo.user_form.DriverDetailFragment">
 
     <ScrollView
-        android:id="@+id/sc_vehicle_detail"
+        android:id="@+id/sc_driver_detail"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="@dimen/_7sdp"
-        android:layout_marginLeft="@dimen/_5sdp"
-        android:layout_marginRight="@dimen/_5sdp"
+        android:layout_marginLeft="@dimen/_6sdp"
+        android:layout_marginRight="@dimen/_6sdp"
         android:layout_marginTop="@dimen/_10sdp"
-        app:layout_constraintBottom_toTopOf="@+id/bt_next"
+        app:layout_constraintBottom_toTopOf="@+id/bt_submit"
         app:layout_constraintHeight_default="spread"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
-                android:id="@+id/ll_vehicle_details"
+                android:id="@+id/ll_driver_details"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical" />
@@ -35,14 +35,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:padding="@dimen/_8sdp"
                 android:layout_marginTop="@dimen/_8sdp"
+                android:padding="@dimen/_8sdp"
                 android:backgroundTint="@color/colorAccent"
                 android:textSize="@dimen/_12sdp"
                 android:textColor="@color/white"
                 android:background="@drawable/curved_rect_field"
                 android:layout_marginLeft="@dimen/_11sdp"
-                android:layout_below="@+id/ll_vehicle_details"
+                android:layout_below="@+id/ll_driver_details"
                 android:text="Add New" />
 
         </RelativeLayout>
@@ -50,7 +50,7 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/bt_next"
+        android:id="@+id/bt_submit"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/_34sdp"
         android:layout_marginBottom="@dimen/_25sdp"
@@ -58,7 +58,7 @@
         android:background="@color/colorAccent"
         android:paddingLeft="@dimen/_20sdp"
         android:paddingRight="@dimen/_20sdp"
-        android:text="Next (Fill Driver Info)"
+        android:text="Submit Information"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
