--- a/app/src/main/res/layout/layout_vehicle_detail.xml
+++ b/app/src/main/res/layout/layout_vehicle_detail.xml
@@ -3,6 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/_5sdp"
+    android:layout_marginBottom="@dimen/_5sdp"
+    android:paddingLeft="@dimen/_2sdp"
+    android:paddingRight="@dimen/_2sdp"
+    android:paddingBottom="@dimen/_4sdp"
+    android:background="@drawable/bg_rect_black"
     tools:context="com.raig.uportinfo.user_form.VehicleDetailFragment">
 
     <android.support.v7.widget.AppCompatSpinner
@@ -43,7 +49,10 @@
             android:id="@+id/et_vehicle_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Vehicle Model"
+            android:imeOptions="actionDone"
+            android:inputType="text"
+            android:maxLines="1"
+            android:hint="Vehicle Model*"
             android:textSize="@dimen/_14sdp" />
 
     </android.support.design.widget.TextInputLayout>
